customer/kubernetes/Deployment-v2-dotnet-customer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customer
    version: v2
    app.kubernetes.io/part-of: Customer
  name: customer-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
      version: v2
  template:
    metadata:
      labels:
        app: customer
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        name: customer
        # This is the last built one from the coles demo
        image: docker.io/mhildema/customer:v3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        securityContext:
          privileged: false
