customer/kubernetes/Deployment-v3-dotnet-customer.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: customer
    version: v3
  name: customer-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
      version: v3
  template:
    metadata:
      labels:
        app: customer
        version: v3
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: MESSAGE_OVERRIDE
          value: "Safari is the best browser!"
        name: customer
        # This is the last built one from the coles demo
        image: docker.io/mhildema/customer:v3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        securityContext:
          privileged: false
