customer/kubernetes/virtual-service-customer-only-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
spec:
  hosts:
  - "*"
  gateways:
  - customer-gateway
  http:
  - match:
    - uri:
        prefix: /customer
    rewrite:
      uri: /
    route:
    - destination:
        host: customer
        subset: version-v1
      weight: 0
    - destination:
        host: customer
        subset: version-v2
      weight: 100
---
