customer/kubernetes/virtual-service-customer-v1_only.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
spec:
  hosts:
  - "*"
  gateways:
  - customer-gateway
  http:
  # - match:
  #   - scheme:
  #     prefix: https
  #   - port: 10443
  #   - uri:
  #       prefix: /customer
  #   rewrite:
  #     uri: /
  #   route:
  #   - destination:
  #       host: customer
  #       subset: version-v2
  #     weight: 100
  - match:
    - uri:
        prefix: /customer
    rewrite:
      uri: /
    route:
    - destination:
        host: customer
        subset: version-v1
      weight: 100
    - destination:
        host: customer
        subset: version-v2
      weight: 00
    retries: 
      attempts: 1
      perTryTimeout: 5s
      retryOn: "506"
# ---
